--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.24.65",
     "gatsby-plugin-google-analytics": "^2.1.4",
     "gatsby-plugin-netlify": "^2.1.3",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sitemap": "^2.2.19",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.10",
     "react": "^16.13.1",
