--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "nicholasduffy.com",
+  "name": "pipefail.dev",
   "description": "My blog.",
   "version": "0.0.1",
   "author": "Nicholas Duffy <duffn@outlook.com>",
